// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChannelHeaderDropdown/MenuItem.CloseDirectChannel shoud be hidden if the channel is not a DM 1`] = `
<MenuItemAction
  onClick={[Function]}
  show={false}
  text="Close Direct Message"
/>
`;

exports[`components/ChannelHeaderDropdown/MenuItem.CloseDirectChannel should match snapshot 1`] = `
<MenuItemAction
  onClick={[Function]}
  show={true}
  text="Close Direct Message"
/>
`;
